--- a/travel-destination/src/components/Tours/Tour/Tour.css
+++ b/travel-destination/src/components/Tours/Tour/Tour.css
@@ -6,6 +6,8 @@
   height: max-content;
   flex-wrap: wrap;
   
+  align-items: center;
+  
 
 }
 
@@ -15,7 +17,8 @@
     border: white solid 2rem;
    border-radius: 5%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
+    
    
 
 }
